fix viewport height on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,5 @@
 }
 
 .chat-window {
-  /* subtract height of input-wrapper, margin and unread messages panel */
-  height: calc(100vh - 90px - 10px - 24px);
   overflow: auto;
 }
